2008-06-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* fakeroot.c (netfs_attempt_utimes): Use a union to avoid an improper
	cast.

2007-06-06  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile (default_pager-MIGCOMSFLAGS): Remove variable.
	* proxy-defpager.c (proxy_defpager_demuxer): Invoke
	`default_pager_server' instead of `S_default_pager_server'.

2007-05-01  Thomas Schwinge  <tschwinge@gnu.org>

	* crash.c (S_msg_startup_dosync): Remove function.

2006-11-27  Ben Asselstine  <benasselstine@canada.com>
	    Thomas Schwinge  <tschwinge@gnu.org>

	* crash.c (trivfs_append_args): Handle CRASH_ORPHANS_HOW.

2006-11-27  Thomas Schwinge  <tschwinge@gnu.org>

	* crash.c: Correct the usage of the argp documentation string.

	* Makefile (HURDLIBS): Add `netfs'.

2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>

	* hello-mt.c (trivfs_S_io_seek): Seek into the correct direction for
	`SEEK_END'.  Return EINVAL if file pointer would become negative.
	* hello.c (trivfs_S_io_seek): Likewise.

2006-03-25  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #15808]
	* ifsock.c: Include <argp.h>, <sys/cdefs.h> and <version.h>.
	(__XSTRING): New macro.
	(argp_program_version, doc, argp): New variables.
	(main): Call argp_parse().
	Based on a patch by Ben Asselstine <benasselstine@gmail.com>.

2005-07-12  Marcus Brinkmann  <marcus@gnu.org>

	* magic.c (magic_getroot): Deallocate DOTDOT if processing here.
	(magic_open): Do not allocate and deallocate DOTDOT, just consume
	the reference given to us.
	(magic_peropen_destroy): New function.
	(main): If in directory mode, install magic_peropen_destroy hook.

2003-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c: Include <stddef.h>.
	(struct netnode): Change type of member idport_locp
	to hurd_ihash_locp_t.
	(idport_ihash): Change type to struct hurd_ihash and initialize
	with HURD_IHASH_INITIALIZER.
	(new_node): Call hurd_ihash_add instead of ihash_add.
	(netfs_node_norefs): Call hrd_ihash_locp_remove instead